--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     }
   ],
   "require": {
-    "php": ">=7.*",
+    "php": "^7.3|^8.0",
     "illuminate/support": "*",
     "illuminate/database": "*",
     "illuminate/pagination": "*",
