--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
   "name": "seguce92/laravel-ifx",
-  "description": "Informix DB driver for Laravel 5",
-  "keywords": ["informix", "laravel", "laravel 5", "ifx" ],
+  "description": "Informix DB driver for Laravel 5, 6, 7, 8, 9",
+  "keywords": ["informix", "laravel", "laravel 5", "laravel 6", "laravel 7", "laravel 8", "laravel 9", "ifx" ],
   "license": "MIT",
-  "version": "1.1.2",
+  "version": "1.1.9",
   "authors": [
     {
       "name": "seguce92",
